--- a/src/app/app.css
+++ b/src/app/app.css
@@ -2,17 +2,6 @@
   --myApp-global--spacer--md: 30px;
 }
 
-#dc-root {
+#sample-root {
   height: 100%;
-}
-
-.app-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: var(--myApp-global--spacer--md);
-}
-
-.notification-container {
-  flex: 0 1 auto;
 }
